service-mesh/bookinfo/08_http2https/egressgateway/01_worldclockapi-serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: worldclockapi
  namespace: bookinfo
  labels:
    example: worldclockapi
spec:
  hosts:
  - worldclockapi.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  # location: MESH_EXTERNAL
