service-mesh/bookinfo/08_http2https/egressgateway/03_worldclockapi-destinationrule-tls.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: worldclockapi-tls
  namespace: bookinfo
  labels: 
    example: worldclockapi
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: worldclockapi
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
      portLevelSettings:
      - port:
          number: 80
        tls:
          mode: ISTIO_MUTUAL
          sni: worldclockapi.com
