service-mesh/bookinfo/08_http2https/egressgateway/04_worldclockapi-virtualservice-http.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: worldclockapi-via-egress
  namespace: bookinfo
  labels:
    example: worldclockapi
spec:
  hosts:
  - worldclockapi.com
  gateways:
  - mesh
  - worldclockapi
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: worldclockapi
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - worldclockapi
      port: 80
    route:
    - destination:
        host: worldclockapi.com
        port:
          number: 443
      weight: 100
