service-mesh/bookinfo/08_http2https/egressgateway/05_worldclockapi-destinationrule-origin.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: worldclockapi
  namespace: bookinfo
  labels: 
    example: worldclockapi
spec:
  host: worldclockapi.com
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
    - port:
        number: 443
      tls:
        mode: SIMPLE
